tests/golden/reject/erru_poison_call_arg_reject.goo
// erru_poison_call_arg_reject (P2.8 FIX F1): a name bound to a failed `:=`
// initializer (f() returns !int, unhandled) is registered as TYPE_POISON
// (see register_declared_names_after_failure) so downstream references
// don't cascade into spurious "Undefined variable" noise. Before this fix
// the poison guard only covered the binary-op choke point and return
// statements — passing the poisoned name as a CALL ARGUMENT fell through
// to the numeric-mismatch check in the call-arg loop and leaked the
// internal "<poisoned>" type-name marker in a second diagnostic
// ("argument 1: cannot use <poisoned> as int64"). This pins that only the
// root diagnostic is emitted; run_golden_reject.sh's global negative
// assertion additionally guards against the "<poisoned>" marker itself
// reappearing in stderr.
package main

func f() !int { return 3 }

func use(n int) int { return n + 1 }

func main() {
	x := f()
	y := use(x)
	_ = y
}
